package DAO;

public class AllRestaurantsFactory {
    public AllResturants GetRestaurantReference(){ return AllResturants.GETALLRESTURANTS();
    }
}
