package DAO;

public class AllUsersFactory {
    public AllUsers GetUsersReference(){ return AllUsers.GETALLUSERS();}
}
